[project]
name = "akasha-py"
version = "0.2.5"
description = "Async API wrapper for akasha.cv written in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.10.5",
    "aiohttp-client-cache[sqlite]>=0.11.1",
    "loguru>=0.7.2",
    "pydantic>=2.9.2",
]
authors = [{ "name" = "seriaati", "email" = "seria.ati@gmail.com" }]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/seriaati/akasha-py"
Repository = "https://github.com/seriaati/akasha-py.git"
Issues = "https://github.com/seriaati/akasha-py/issues"

[project.optional-dependencies]
test = ["pytest-asyncio>=0.24.0", "pytest>=8.3.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["akasha"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.pyright]
typeCheckingMode = "standard"
